mail-server/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailserver-ingress
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /.well-known/acme-challenge/ {
        default_type "text/plain";
        root /usr/share/nginx/html;
        try_files $uri =404;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mail.foson.co
        - webmail.foson.co
      secretName: mailserver-tls
  rules:
    - host: mail.foson.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailserver
                port:
                  number: 587
    - host: webmail.foson.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rainloop
                port:
                  number: 80
